# amperzap

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/system_modules/: battery_info.rs  commands.rs  mod.rs
src/contexts/: useBattery.tsx  useSystem.tsx
src/lib/: utils.ts
