[package]
name = "Amperzap"
version = "0.1.0"
license = "GPL-3.0-only"
homepage = "https://amperzap.dev"
repository = "https://github.com/H-Was1/amperzap"
keywords = ["battery", "optimizer", "power", "utility", "monitoring"]
categories = ["system", "utilities"]
readme = "README.md"
description = "AmperZap is a cross-platform app that optimizes your device's battery life. It intelligently monitors usage and sends timely notifications to remind you when to plug in or unplug, helping to save battery charge cycles. Extend your battery's longevity with smart charging habits!"

authors = ["Hammad Wasi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amperzap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
battery = "0.7.8"
tauri-plugin-notification = "2.2.2"
rodio = "0.20.1"
sysinfo = "0.33.1"
tauri-plugin-fs = "2"




[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
